--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -9,7 +9,7 @@ h1.hire__text {
 p.hire__text{
     font-size: 18px;
     line-height: 30px;
-    color: #f01695;
+    color: rgb(240, 22, 149);
     font-weight: 400;
 }
 input.contact{
