--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -1,5 +1,6 @@
-.dash-bg{
-    background-color: rgb(9, 6, 22);
+.dash-bg {
+    background-color: #5022f5e5;
     background-size: cover;
-    
+
+
 }
