--- a/src/Pages/Navbar/Navbar.css
+++ b/src/Pages/Navbar/Navbar.css
@@ -1,38 +1,36 @@
-
-
-.navbar-nav{
+.navbar-nav {
   margin-left: 100px;
-  
+
 }
+
 .navbar-nav a {
   color: white !important;
   font-weight: 500 !important;
 }
-.navbar-nav li{
+
+.navbar-nav li {
   padding-left: 60px;
 }
-.nav-bgcolor{
-  background-color: hsla(240, 87%, 47%, 0.624);
-  
+
+.nav-bgcolor {
+  background-color: #2209e07f;
+
 }
 
-.navmother{
+.navmother {
   width: 100%;
-    height: 100px;
-    position: absolute!important;
-    top: 0;
-    margin: 0%;
-    padding: 0%;
-    background: hsl(295, 40%, 37%);
-    z-index: 1;
-    box-shadow: 0 5px 5px rgba(212, 31, 91, 0.1);
-    align-items: center;
-   
+  height: 100px;
+  position: absolute !important;
+  top: 0;
+  margin: 0%;
+  padding: 0%;
+  background: hsl(239, 95%, 48%);
+  z-index: 1;
+  box-shadow: 0 5px 5px #e10cecbe;
+  align-items: center;
+
 }
-.nav-p{
+
+.nav-p {
   margin-bottom: 100px;
 }
-
-
-
-  
